--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
-baseURL = "https://examplesite.com"
-title = "Sajib Hossain | Web Developer"
+baseURL = "https://israfil.design"
+title = "Israfil Arif | Graphic Designer"
 theme = "somrat"
 # post pagination
 paginate = "6"
@@ -78,7 +78,7 @@ preloader = "images/preloader.gif" # use jpg, png, svg or gif format.
 ############################# social site ########################
 [[params.social]]
 icon = "fab fa-facebook-f"
-link = "https://www.facebook.com/sajibhossain.me"
+link = "https://www.facebook.com/israfil.arif.9/"
 
 [[params.social]]
 icon = "fab fa-twitter"
@@ -105,7 +105,7 @@ contentDir = "content/english"
 weight = 1
 home = "Home"
 # copyright
-copyright = "Copyright 2021 &copy; Sajib Hossain "
+copyright = "Copyright 2022 &copy; Israfil Arif "
 
 
 ################# english navigation ##################
