--- a/config.toml
+++ b/config.toml
@@ -82,11 +82,11 @@ link = "https://www.facebook.com/israfil.arif.9/"
 
 [[params.social]]
 icon = "fab fa-twitter"
-link = "https://twitter.com/Sajib_Sj5"
+link = "https://twitter.com/Israfil_Arif"
 
 [[params.social]]
 icon = "fab fa-instagram"
-link = "https://www.instagram.com/sajib.sj359"
+link = "https://www.instagram.com/israfil_arif"
 
 [[params.social]]
 icon = "fab fa-github"
@@ -94,7 +94,7 @@ link = "https://github.com/sajib359"
 
 [[params.social]]
 icon = "fab fa-linkedin"
-link = "https://linkedin.com/in/sajib359"
+link = "https://linkedin.com/in/israfil-arif"
 
 
 ################################### English language #####################################
