--- a/config.toml
+++ b/config.toml
@@ -89,7 +89,7 @@ icon = "fab fa-instagram"
 link = "https://www.instagram.com/israfil_arif"
 
 [[params.social]]
-icon = "fab fa-reddit"
+icon = "fab fa-behance"
 link = "https://github.com/sajib359"
 
 [[params.social]]
