--- a/config.toml
+++ b/config.toml
@@ -90,7 +90,7 @@ link = "https://www.instagram.com/israfil_arif"
 
 [[params.social]]
 icon = "fab fa-behance"
-link = "https://github.com/sajib359"
+link = "https://behance.net/israfilarif"
 
 [[params.social]]
 icon = "fab fa-linkedin"
